<resources>
    <string name="app_name">Organizer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Navigation Drawer Menu items -->
    <string name="menu_tasks">Tasks</string>
    <string name="menu_lists">Lists</string>
    <string name="menu_finished_tasks">Finished tasks</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_additionally">Additionally</string>
    <string name="menu_about">About app</string>
    <string name="menu_themes">Themes</string>

    <!-- Tool bar title -->
    <string name="new_task">New task</string>

    <!-- New Task Activity UI elements text -->
    <string name="do_u_got_a_task">Do you got a task?</string>
    <string name="enter_ur_task">Enter task here</string>
    <string name="set_date">Set date</string>
    <string name="date_not_set">Date not set</string>
    <string name="set_time">Set time</string>
    <string name="time_not_set">Time not set</string>
    <string name="repeat">Repeat</string>
    <string name="add_to_list">Add to list</string>

    <!-- Repeat options for task-->
    <string-array name="repeat_options">
        <item>No repeat</item>
        <item>Once an Hour</item>
        <item>Once a Day</item>
        <item>Once a Week</item>
        <item>Once a Year</item>
    </string-array>
</resources>