<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tasks"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_tasks" />
        <item
            android:id="@+id/nav_lists"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/menu_lists" />
        <item
            android:id="@+id/nav_finishedtasks"
            android:icon="@drawable/ic_assignment_turned_in_black_24dp"
            android:title="@string/menu_finished_tasks" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_settings" />
    </group>

    <item android:title="@string/menu_additionally">
        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/menu_about" />
                <item
                    android:id="@+id/nav_themes"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_themes" />

            </group>
        </menu>
    </item>

</menu>