<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewTaskActivity">

    <!-- Custom New Task Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarNewTask"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/menu_toolbar_new_task_activity"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/new_task"
        app:titleTextColor="@android:color/white"></androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarNewTask">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewHaveTask"
                android:layout_width="270dp"
                android:layout_height="20dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="28dp"
                android:layout_marginRight="8dp"
                android:elevation="24dp"
                android:gravity="start"
                android:text="@string/do_u_got_a_task"
                android:textAlignment="viewStart"
                android:textColor="?attr/colorPrimary"
                android:textSize="14sp"
                android:textStyle="bold"
                android:visibility="visible"
                app:layout_constraintHorizontal_bias="0.108"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:targetApi="lollipop" />

            <EditText
                android:id="@+id/editTask"
                android:layout_width="282dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:minHeight="50dp"
                android:hint="@string/enter_ur_task"
                android:inputType="textMultiLine"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:visibility="visible"
                android:scrollbars="vertical"
                android:gravity="top|start"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.13"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewHaveTask" />

            <ImageButton
                android:id="@+id/imageBtnSpeak"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="16dp"
                android:background="?android:attr/colorBackground"
                android:contentDescription="@string/app_name"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@+id/editTask"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toEndOf="@+id/editTask"
                app:srcCompat="@drawable/ic_micro_primary" />

            <TextView
                android:id="@+id/textViewSetDate"
                android:layout_width="270dp"
                android:layout_height="20dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="8dp"
                android:gravity="start"
                android:text="@string/set_date"
                android:textAlignment="viewStart"
                android:textColor="?attr/colorPrimary"
                android:textSize="14sp"
                android:textStyle="bold"
                android:visibility="visible"
                app:layout_constraintHorizontal_bias="0.108"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTask" />

            <EditText
                android:id="@+id/editDate"
                android:layout_width="235dp"
                android:layout_height="50dp"

                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"

                android:height="50dp"
                android:cursorVisible="false"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="true"
                android:hint="@string/date_not_set"
                android:inputType="date"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:visibility="visible"
                app:layout_constraintHorizontal_bias="0.073"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewSetDate" />

            <ImageButton
                android:id="@+id/imageBtnDate"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:background="?android:attr/colorBackground"
                android:contentDescription="@string/app_name"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@+id/editDate"
                app:layout_constraintHorizontal_bias="0.84"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/editDate"
                app:layout_constraintVertical_bias="1.0"
                app:srcCompat="@drawable/ic_btn_setdate" />

            <ImageButton
                android:id="@+id/imgBtnClearDate"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:background="?android:attr/colorBackground"
                android:contentDescription="@string/app_name"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@+id/editDate"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintLeft_toRightOf="@+id/editDate"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/editDate"
                app:layout_constraintVertical_bias="1.0"
                app:srcCompat="@android:drawable/ic_delete" />

            <TextView
                android:id="@+id/textViewSetTime"
                android:layout_width="270dp"
                android:layout_height="20dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="8dp"
                android:gravity="start"
                android:text="@string/set_time"
                android:textAlignment="viewStart"
                android:textColor="?attr/colorPrimary"
                android:textSize="14sp"
                android:textStyle="bold"
                android:visibility="visible"
                app:layout_constraintHorizontal_bias="0.108"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editDate" />

            <EditText
                android:id="@+id/editTime"
                android:layout_width="235dp"
                android:layout_height="50dp"

                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"

                android:height="50dp"
                android:cursorVisible="false"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/time_not_set"
                android:inputType="none"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:visibility="visible"
                app:layout_constraintHorizontal_bias="0.07"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewSetTime" />

            <ImageButton
                android:id="@+id/imageBtnTime"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:background="?android:attr/colorBackground"
                android:contentDescription="@string/app_name"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@+id/editTime"
                app:layout_constraintHorizontal_bias="0.816"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/editTime"
                app:layout_constraintVertical_bias="1.0"
                app:srcCompat="@drawable/ic_btn_settime" />

            <ImageButton
                android:id="@+id/imgBtnClearTime"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:background="?android:attr/colorBackground"
                android:contentDescription="@string/app_name"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@+id/editTime"
                app:layout_constraintHorizontal_bias="0.862"
                app:layout_constraintLeft_toRightOf="@+id/editTime"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/editTime"
                app:layout_constraintVertical_bias="1.0"
                app:srcCompat="@android:drawable/ic_delete" />

            <TextView
                android:id="@+id/textViewRepeat"
                android:layout_width="270dp"
                android:layout_height="20dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="19dp"
                android:layout_marginRight="8dp"
                android:gravity="start"
                android:text="@string/repeat"
                android:textAlignment="viewStart"
                android:textColor="?attr/colorPrimary"
                android:textSize="14sp"
                android:textStyle="bold"
                android:visibility="visible"
                app:layout_constraintHorizontal_bias="0.108"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTime" />

            <Button
                android:id="@+id/btnRepeat"
                style="@android:style/Widget.Holo.Light.Spinner"
                android:layout_width="263dp"
                android:layout_height="50dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="64dp"
                android:height="50dp"
                android:gravity="center|start"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.142"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewRepeat"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textViewAddToList"
                android:layout_width="270dp"
                android:layout_height="20dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="19dp"
                android:layout_marginRight="8dp"
                android:gravity="start"
                android:text="@string/add_to_list"
                android:textAlignment="viewStart"
                android:textColor="?attr/colorPrimary"
                android:textSize="14sp"
                android:textStyle="bold"
                android:visibility="visible"
                app:layout_constraintHorizontal_bias="0.108"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnRepeat" />

            <Button
                android:id="@+id/btnAddToList"
                style="@android:style/Widget.Holo.Light.Spinner"
                android:layout_width="263dp"
                android:layout_height="50dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="100dp"
                android:height="50dp"
                android:gravity="center|start"
                android:textAlignment="gravity"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.142"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewAddToList"
                app:layout_constraintVertical_bias="0.0" />

            <ImageButton
                android:id="@+id/imgBtnNewList"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="8dp"
                android:background="?android:attr/colorBackground"
                android:contentDescription="@string/app_name"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@+id/btnAddToList"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnAddToList"
                app:layout_constraintTop_toBottomOf="@+id/textViewAddToList"
                app:srcCompat="@drawable/ic_action_name" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>